# parse-rosetta-rs

examples/chumsky-app/: parser.rs
examples/logos-app/: parser.rs
examples/pest-app/: app.rs
examples/rust-sitter-app/: Cargo.toml  app.rs  build.rs  parser.rs
examples/rust-sitter-app/src/: app.rs  parser.rs
