[package]
name = "rust-sitter-app"
edition.workspace = true

[[bin]]
name = "rust-sitter-app"
path = "src/app.rs"

[features]
default = ["tree-sitter-standard"]
tree-sitter-c2rust = ["rust-sitter/tree-sitter-c2rust"]
tree-sitter-standard = ["rust-sitter/tree-sitter-standard"]


[dependencies]
rust-sitter = { version = "0.4.3", default-features = false }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
rust-sitter-tool = "0.4.3"
